--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,5 +21,5 @@ services:
       - MOCKSERVER_INITIALIZATION_JSON_PATH=/config/mocked-requests.json
     volumes:
       - type: bind
-        source: ./mockserver
+        source: ./oidc-server
         target: /config
